--- a/todo_list/base/templates/base/task_list.html
+++ b/todo_list/base/templates/base/task_list.html
@@ -1,3 +1,13 @@
+{% if request.user.is_authenticated %}
+<p>{{request.user}}</p>
+<form method="POST" action="{% url 'logout' %}">
+    {% csrf_token %}
+    <button type="submit">logout</button>
+</form>
+{% else %}
+<a href="{% url 'login' %}">Login</a>
+{% endif %}
+<hr>
 <h2>todo</h2>
 <a href="{% url 'task-create' %}"> Add task</a>
 <table>
