--- a/todo_list/base/templates/base/task_list.html
+++ b/todo_list/base/templates/base/task_list.html
@@ -10,6 +10,13 @@
 <hr>
 <h2>todo</h2>
 <a href="{% url 'task-create' %}"> Add task</a>
+
+<form method="GET">
+
+    <input type="text" name='search-area' value="{{search_input}}">
+    <input type="submit" value="Search">
+</form>
+
 <table>
     <tr>
         <th>Item</th>
